parallax medio melo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="model/Parallax.js"></script>
     <script src="model/Fondo.js"></script>
     <script src="model/FondoDos.js"></script>
+    <script src="model/FondoTres.js"></script>
     <script src="model/Galleta.js"></script>
     <script src="model/Llave.js"></script>
     <script src="model/Pocion.js"></script>
